[tool.poetry]
name = "blog"
version = "0.1.0"
description = "for learning fastapi"
authors = ["bingotyty"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.scripts]
my_blog = "blog.cmdline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
