[tool.poetry]
name = "blog"
version = "0.1.0"
description = "for learning fastapi"
authors = ["bingotyty"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
dynaconf = "^3.1.12"
sqlalchemy = "^2.0.10"
mysqlclient = "^2.1.1"
pydantic = "^1.10.7"

[tool.poetry.scripts]
my_blog = "blog.cmdline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
