[tool.poetry]
name = "blog"
version = "0.1.0"
description = "for learning fastapi"
authors = ["bingotyty"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
dynaconf = "^3.1.12"
sqlalchemy = "^2.0.10"
mysqlclient = "^2.1.1"
pydantic = "^1.10.7"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
alembic = "^1.10.3"

[tool.poetry.scripts]
my_blog = "blog.cmdline:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
requests = "^2.28.2"
httpx = "^0.24.0"
pytest-mock = "^3.10.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
